Switch to passwordmaker.org charset generation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/jquery.mobile.js"></script>
     <script src="js/toggle-button.js"></script>
+    <script src="js/passwordmaker/hashutils.js"></script>
     <script src="js/cryptojs-3.0.2/rollups/hmac-sha512.js"></script>
     <script src="js/cryptojs-3.0.2/rollups/aes.js"></script>
     <script src="js/sjcl/sjcl.js"></script>
