Allow creation of new password for a site

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
                     <option value="on" selected>On</option>
                 </select>
             </div>
+
+            <div data-role="fieldcontain">
+                <label for="newpassword">Generate new password:</label>
+                <select name="newpassword" id="newpassword" data-role="slider">
+                    <option value="off" selected>Off</option>
+                    <option value="on">On</option>
+                </select>
+            </div>
         </div>
 
         <div id="result" data-role="collapsible">
