Allow notes to be added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             </div>
 
             <div data-role="fieldcontain">
+                <label for="notes">Notes:</label>
+                <input type="text" name="notes" id="notes" value=""/>
+            </div>
+
+            <div data-role="fieldcontain">
                 <label for="length" class="select">Length:</label>
                 <select name="length" id="length">
                     <option value="8">8</option>
