Remove label text wrapping

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div data-role="content" data-theme="b">
         <div data-role="fieldcontain">
-            <label for="master">Master password:</label>
+            <label style="width:100%" for="master">Master password:</label>
             <input type="password" name="master" id="master" value=""/>
             <input type="hidden" name="domain" id="domain" value=""/>
         </div>
@@ -86,7 +86,7 @@
             </div>
 
             <div data-role="fieldcontain">
-                <label for="symbol">Include symbols:</label>
+                <label style="width:100%" for="symbol">Include symbols:</label>
                 <select name="symbol" id="symbol" data-role="slider">
                     <option value="off">Off</option>
                     <option value="on" selected>On</option>
@@ -94,7 +94,7 @@
             </div>
 
             <div data-role="fieldcontain">
-                <label for="newpassword">Generate new password:</label>
+                <label style="width:100%" for="newpassword">Generate new password:</label>
                 <select name="newpassword" id="newpassword" data-role="slider">
                     <option value="off" selected>Off</option>
                     <option value="on">On</option>
@@ -121,11 +121,11 @@
     </div>
     <div data-role="content" data-theme="b">
         <div data-role="fieldcontain">
-            <label for="setup_master">Master password:</label>
+            <label style="width:100%" for="setup_master">Master password:</label>
             <input type="password" name="setup_master" id="setup_master" value=""/>
         </div>
         <div data-role="fieldcontain">
-            <label for="setup_url">Storage URL:</label>
+            <label style="width:100%" for="setup_url">Storage URL:</label>
             <input type="text" name="setup_url" id="setup_url" value=""/>
         </div>
         <a id="setup_cancel" data-role="button" data-inline="true" data-theme="b">Cancel</a>
