Reset state upon hide for Firefox

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Password</h1>
     </div><!-- /header -->
 
-    <div data-role="content" data-theme="b">
+    <div id="generator_content" data-role="content" data-theme="b">
         <div data-role="fieldcontain">
             <label style="width:100%" for="master">Master password:</label>
             <input type="password" name="master" id="master" value=""/>
