Use an unique encryption key per upload

--- a/test.html
+++ b/test.html
@@ -20,5 +20,17 @@
     <button onclick="alert(''+CryptoJS.PBKDF2('master', 'salt', { hasher: CryptoJS.algo.SHA512, keySize: 512/32, iterations: 500 }));">500 rounds</button>
 	<br><br>
     <button onclick="alert(''+CryptoJS.PBKDF2('master', 'salt', { hasher: CryptoJS.algo.SHA512, keySize: 512/32, iterations: 1000 }));">1000 rounds</button>
+	<br><br>
+    <button onclick="alert(''+CryptoJS.PBKDF2('master', 'salt', { hasher: CryptoJS.algo.SHA512, keySize: 512/32, iterations: 1500 }));">1500 rounds</button>
+	<br><br>
+    <button onclick="alert(''+CryptoJS.PBKDF2('master', 'salt', { hasher: CryptoJS.algo.SHA512, keySize: 512/32, iterations: 2000 }));">2000 rounds</button>
+	<br><br>
+    <button onclick="alert(''+CryptoJS.PBKDF2('master', 'salt', { hasher: CryptoJS.algo.SHA512, keySize: 512/32, iterations: 2500 }));">2500 rounds</button>
+	<br><br>
+    <button onclick="alert(''+CryptoJS.PBKDF2('master', 'salt', { hasher: CryptoJS.algo.SHA512, keySize: 512/32, iterations: 3000 }));">3000 rounds</button>
+	<br><br>
+    <button onclick="alert(''+CryptoJS.PBKDF2('master', 'salt', { hasher: CryptoJS.algo.SHA512, keySize: 512/32, iterations: 3500 }));">3500 rounds</button>
+	<br><br>
+    <button onclick="alert(''+CryptoJS.PBKDF2('master', 'salt', { hasher: CryptoJS.algo.SHA512, keySize: 512/32, iterations: 4096 }));">4096 rounds</button>
 </body>
 </html>
