--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,13 @@
         -->
         <script src="../bower_components/angular/angular.js"></script>
         <script src="../bower_components/angular-route/angular-route.js"></script>
+        <script src="dependencies/"></script>
+        <script src="dependencies/cryptojs-3.1.2/rollups/hmac-sha512.js"></script>
+        <script src="dependencies/cryptojs-3.1.2/rollups/aes.js"></script>
+        <script src="dependencies/cryptojs-3.1.2/rollups/pbkdf2.js"></script>
+        <script src="dependencies/cryptojs-3.1.2/rollups/sha512.js"></script>
+        <script src="dependencies/sjcl/sjcl.js"></script>
+        <script src="dependencies/passwordmaker/hashutils.js"></script>
         <script src="js/app.js"></script>
         <script src="js/services.js"></script>
         <script src="js/controllers.js"></script>
