--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/app.css"/>
         <link rel="stylesheet" href="dependencies/metro/jquery.mobile.metro.theme.css"/>
         <link rel="stylesheet" href="dependencies/toggle-button/toggle-button.css"/>
+        <link rel="stylesheet" href="../bower_components/angular/angular-csp.css"/>
     </head>
     <body class="ui-mobile-viewport ui-overlay-b">
         <div ng-view></div>
@@ -16,7 +17,6 @@
         -->
         <script src="../bower_components/angular/angular.js"></script>
         <script src="../bower_components/angular-route/angular-route.js"></script>
-        <script src="dependencies/"></script>
         <script src="dependencies/cryptojs-3.1.2/rollups/hmac-sha512.js"></script>
         <script src="dependencies/cryptojs-3.1.2/rollups/aes.js"></script>
         <script src="dependencies/cryptojs-3.1.2/rollups/pbkdf2.js"></script>
