--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://hash0.pw/app/"/>
+<meta http-equiv="refresh" content="0; url=./app/"/>
 </head>
 <body>
 Redirecting...
