--- a/app/index.html
+++ b/app/index.html
@@ -6,17 +6,14 @@
         <meta content='text/html;charset=utf-8' http-equiv='content-type'>
         <link rel="stylesheet" href="dependencies/metro/jquery.mobile.metro.theme.css"/>
         <link rel="stylesheet" href="dependencies/toggle-button/toggle-button.css"/>
-        <link rel="stylesheet" href="../bower_components/angular/angular-csp.css"/>
+        <link rel="stylesheet" href="dependencies/angular-1.3.16/angular-csp.css"/>
         <link rel="stylesheet" href="css/app.css"/>
     </head>
     <body class="ui-mobile-viewport ui-overlay-b">
         <div ng-view></div>
 
-        <!-- In production use:
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-        -->
-        <script src="../bower_components/angular/angular.js"></script>
-        <script src="../bower_components/angular-route/angular-route.js"></script>
+        <script src="dependencies/angular-1.3.16/angular.min.js"></script>
+        <script src="dependencies/angular-1.3.16/angular-route.min.js"></script>
         <script src="dependencies/cryptojs-3.1.2/components/core.js"></script>
         <script src="dependencies/sjcl/sjcl.js"></script>
         <script src="dependencies/passwordmaker/hashutils.js"></script>
